fix truncated test values

--- a/qatrack/qa/static/css/qa.css
+++ b/qatrack/qa/static/css/qa.css
@@ -191,17 +191,17 @@ th.qa-name div{
     margin-bottom:0px;
 }
 .qa-history{
-    min-width:250px;
+    min-width:320px;
 }
 th.qa-history div{
 /* hack to fix IE7 min-width*/
-    width:220px;
+    width:310px;
     height:1px;
 }
 
 .history-value,.history-label {
     display:inline-block;
-    width: 42px;
+    width: 50px;
     text-align:right;
     margin-right: 1px; /*fix ie inline block bug*/
 }
